mysql role explanation added